mType/tests/testFiles/import/pass/importWithDotSlash.mt
// Test: Import with explicit ./
import { DotSlashClass } from "./modules/DotSlashModule.mt";

DotSlashClass obj = new DotSlashClass();
print(obj.greet());
