mType/tests/testFiles/import/error/library/importLibSelectiveEmpty.mt
// Test: import lib with empty selective list should error
import lib {} from "SomeLib";

print("Should not reach here");
